fixed links and more spacing issues

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -119,12 +119,13 @@ div.iod {
 div.iod h2 {
 	font-size: 70px;
 	text-align: center;
+	line-height: 0.85;
 }
 
 div.iod button {
 	text-align: center;
 	position: absolute;
-	top: 256px;
+	top: 230px;
 	left: 70px;
 	width: 140px;
 	height: 30px;
